--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+    margin: 100;
+    padding: 100;
+    font-family: 'Lucida Console, Monaco,
     /*color: #fff;*/
 }
 /* ESTILOS GLOBALES */
@@ -51,7 +51,7 @@ header .main-container nav ul li a{
     padding: 0 19px;
 }
 header .main-container nav ul li a:hover{
-    color: rgb(136, 17, 17);
+    color: rgb(22, 168, 45);
     font-weight: bold;
     font-size: 18px;
 }
